--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <body>
     <!-- https://preview.themeforest.net/item/education-college-education-master/full_screen_preview/21215976?_ga=2.213108820.1107571502.1658892489-442893672.1656644079 -->
 
-    <h1>open</h1>
+    <section class="header">
+
+    </section>
   </body>
 </html>
