--- a/index.html
+++ b/index.html
@@ -11,7 +11,25 @@
     <!-- https://preview.themeforest.net/item/education-college-education-master/full_screen_preview/21215976?_ga=2.213108820.1107571502.1658892489-442893672.1656644079 -->
 
     <section class="header">
-
+       <nav>
+        <a href="#"><img src="https://rn53themes.net/themes/demo/education-master/images/logo.png" alt="education-logo"></a>
+        <div class="nav_links">
+            <ul>
+                <li><a href="">HOME</a></li>
+                <li><a href="">ABOUT</a></li>
+                <li><a href="">COURSE</a></li>
+                <li><a href="">BLOG</a></li>
+                <li><a href="">CONTACT</a></li>
+            </ul>
+        </div>
+       
+       </nav>
+       <div class="text_box">
+        <h1>WELCOME TO UNIVERSITY</h1>
+       <p>Education is defined as the process
+       of gaining knowledge. An example of  <br/> education is attending college and studying.</p>
+       <a class="banner_btn" href="#">Read More</a>
+    </div>
     </section>
   </body>
 </html>
