--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     ></script>
   </head>
   <body>
-
     <section class="header">
       <nav>
         <a href="#"
@@ -24,9 +23,10 @@
         <div id="navLinks" class="nav_links">
           <i class="fas fa-times close" onclick="hideMenu()"></i>
           <ul>
-            <li><a href="">HOME</a></li>
-            <li><a href="">ABOUT</a></li>
-            <li><a href="">COURSE</a></li>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="courses.html">COURSE</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+
             <li><a href="">BLOG</a></li>
             <li><a href="">CONTACT</a></li>
           </ul>
@@ -45,12 +45,12 @@
     </section>
     <!-- ----------------cources -->
     <section class="courses">
-      <h1>Popular <span class="heading_orange"> Courses</span></h1>
+      <h1>Classic <span class="heading_orange"> Courses</span></h1>
       <p>
         your teacher adds all your scores divides the answer by the number of
         math tests you took.
       </p>
-      <div class="row">
+      <div class="courses_row">
         <div class="course_col">
           <h1>Technology / Space / Aerospace</h1>
           <p>
@@ -174,7 +174,7 @@
           <div class="testimonial_info">
             <p>
               In promotion and advertising, a testimonial or show consists of a
-              person's written or spoken 
+              person's written or spoken
             </p>
             <h3>Brian Cumin</h3>
 
@@ -193,7 +193,7 @@
           <div class="testimonial_info">
             <p>
               In promotion and advertising, a testimonial or show consists of a
-              person's written or spoken 
+              person's written or spoken
             </p>
             <h3>Elon Gated</h3>
 
@@ -201,9 +201,8 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
             <i class="fas fa-star-half-alt"></i>
-    
+
             <i class="fas fa-star-half-alt"></i>
-    
           </div>
         </div>
         <div class="testimonial_col">
@@ -214,7 +213,7 @@
           <div class="testimonial_info">
             <p>
               In promotion and advertising, a testimonial or show consists of a
-              person's written or spoken 
+              person's written or spoken
             </p>
             <h3>Hilary Ouse</h3>
 
@@ -230,9 +229,23 @@
     </section>
     <!-----------------------online courses -->
     <section class="online_courses">
-      <h1>Online Courses <br/>From Eduka University</h1>
+      <h1>Online Courses <br />From Eduka University</h1>
       <a class="online_courses_btn" href="#">Find Out More</a>
-
+    </section>
+    <!-------------------------------Footer start here -->
+    <section class="footer">
+      <h4>About Us</h4>
+      <p>
+        In promotion and advertising, a testimonial or show <br />
+        of a person's written or spoken
+      </p>
+      <div class="icons">
+        <i class="fab fa-facebook"></i>
+        <i class="fab fa-linkedin"></i>
+        <i class="fab fa-instagram-square"></i>
+        <i class="fab fa-twitter"></i>
+      </div>
+      <p>© 2022 All Rights Reserved. Design By Tamanna</p>
     </section>
     <!-- javascript -->
     <script>
