--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
       <nav>
         <a href="#"
           ><img
-            src="https://rn53themes.net/themes/demo/education-master/images/logo.png"
+            src="https://ng-educal.vercel.app/assets/img/logo/logo-2.png"
             alt="education-logo"
         /></a>
         <div id="navLinks" class="nav_links">
@@ -27,7 +27,7 @@
             <li><a href="courses.html">COURSE</a></li>
             <li><a href="about.html">ABOUT</a></li>
 
-            <li><a href="">BLOG</a></li>
+            <li><a href="blog.html">BLOG</a></li>
             <li><a href="">CONTACT</a></li>
           </ul>
         </div>
