--- a/courses.html
+++ b/courses.html
@@ -13,11 +13,11 @@
     ></script>
   </head>
   <body>
-    <section class="sub_header">
+    <section class="courses_header">
       <nav>
         <a href="#"
           ><img
-            src="https://rn53themes.net/themes/demo/education-master/images/logo.png"
+            src="https://ng-educal.vercel.app/assets/img/logo/logo-2.png"
             alt="education-logo"
         /></a>
         <div id="navLinks" class="nav_links">
@@ -33,7 +33,7 @@
         </div>
         <i class="fas fa-bars" onclick="showMenu()"></i>
       </nav>
-      <h1>About us</h1>
+      <h1>Courses</h1>
     </section>
     <!-- ----------------cources -->
     <section class="courses">
@@ -88,7 +88,7 @@
       </div>
     </section>
 
-<!-- -->
+    <!-- -->
 
     <section class="footer">
       <h4>About Us</h4>
