--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     ></script>
   </head>
   <body>
-    <section class="blog_header">
+    <section class="contact_header">
       <nav>
         <a href="#"
           ><img
@@ -33,45 +33,62 @@
         </div>
         <i class="fas fa-bars" onclick="showMenu()"></i>
       </nav>
-      <h1>The Challenge Of Global Learning In Public Education</h1>
+      <h1>Contact</h1>
     </section>
-    <!---------------------student blogs -->
-    <div class="blogs_info">
-      <h1>Our Blogs</h1>
-      <p>
-        Me old mucker argy-bargy I'm telling pear shaped Jeffrey super
-        brilliant, I excuse my French blatant gormless up the duff, cup of char
-        up the kyver tosser cras happy days. The full monty he nicked it he
-        legged it bum bag burke plastered arse over tit it's your round owt to
-        do with me pardon you, on your bike mate hanky panky mush cuppa only a
-        quid crikey Jeffrey skive off, faff about so I said what a load of
-        rubbish blag David knees up cockup cras. Argy-bargy give us a bell
-        wellies gosh skive off old bodge cheesed off A bit of how's your father
-        off his nut bamboozled, bugger say I'm telling morish bleeding boot up
-        the kyver nice one brilliant, ruddy jolly good fanny around chinwag
-        amongst brown bread arse brolly. Horse play it's all gone to pot
-        codswallop easy peasy mush knees up down the pub jolly good nice one
-        tosser it's your round lurgy, I vagabond barmy off his nut only a quid
-        so I said is gosh Charles blow off, pardon me chip shop Richard spiffing
-        skive off bleeding get stuffed mate porkies amongst the full monty.
-      </p>
-    </div>
-    <!--------------------------------student review -->
-    <div class="review">
-      <div class="review_info">
+
+    <!---------------------------contact from start here -->
+    <section class="contact">
+      <div class="content">
+        <h1>Get Intouch</h1>
         <p>
-          After I started learning design with Quillow, I realized that I had
-          Improved to very advanced levels.
+          Have a question or just want to say hi? We'd love to hear from you.
         </p>
-        <h1>- Chris Collins</h1>
       </div>
-      <div class="review_img">
-        <img
-          src="https://ng-educal.vercel.app/assets/img/blog/quote-1.png"
-          alt="review_img"
-        />
+      <div class="contaner">
+        <div class="contact_info">
+          <div class="contact_links">
+            <div class="icons"><i class="fas fa-map-marker-alt"></i></div>
+            <div class="text">
+              <h3>Address</h3>
+              <p>abc</p>
+            </div>
+          </div>
+          <div class="contact_links">
+            <div class="icons"><i class="fas fa-phone"></i></div>
+            <div class="text">
+              <h3>Phone</h3>
+              <p>123</p>
+            </div>
+          </div>
+          <div class="contact_links">
+            <div class="icons"><i class="fas fa-envelope"></i></div>
+            <div class="text">
+              <h3>Email</h3>
+              <p>abc@gmail.com</p>
+            </div>
+          </div>
+        </div>
+        <div class="contact_form">
+          <h1>send message</h1>
+          <div class="input_box">
+            <input type="text" required="required" />
+            <span>Full Name</span>
+          </div>
+          <div class="input_box">
+            <input type="text" required="required" />
+            <span>Full Name</span>
+          </div>
+          <div class="input_box">
+            <textarea required="required"></textarea>
+            <span>Write Your message</span>
+          </div>
+          <div class="input_box">
+            <input type="submit" value="send" />
+          </div>
+        </div>
       </div>
-    </div>
+    </section>
+
     <!--footer -->
 
     <section class="footer">
