--- a/courses.html
+++ b/courses.html
@@ -28,7 +28,7 @@
             <li><a href="about.html">ABOUT</a></li>
 
             <li><a href="">BLOG</a></li>
-            <li><a href="">CONTACT</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
           </ul>
         </div>
         <i class="fas fa-bars" onclick="showMenu()"></i>
