--- a/courses.html
+++ b/courses.html
@@ -24,10 +24,10 @@
           <i class="fas fa-times close" onclick="hideMenu()"></i>
           <ul>
             <li><a href="index.html">HOME</a></li>
-            <li><a href="">COURSE</a></li>
+            <li><a href="courses.html">COURSE</a></li>
             <li><a href="about.html">ABOUT</a></li>
 
-            <li><a href="">BLOG</a></li>
+            <li><a href="blog.html">BLOG</a></li>
             <li><a href="contact.html">CONTACT</a></li>
           </ul>
         </div>
