--- a/courses.html
+++ b/courses.html
@@ -88,7 +88,34 @@
       </div>
     </section>
 
-    <!-- -->
+    <!-------------------popular courses -->
+
+    <section class="popular_courses">
+      <div class="popular_cards">
+        <div class="card">
+          <div class="card_img">
+            <img
+              src="https://ng-educal.vercel.app/assets/img/course/course-2.jpg"
+              alt="card_img"
+            />
+          </div>
+          <div class="card_info">
+            <div class="details">
+              <h1 class="details_heading">Become a product Manager learn the skills & job.</h1>
+              <div class="data">
+                <h1>$21.00</h1>
+                <h1>$21.00</h1>
+                <h1>$21.00</h1>
+                <h1>cdhdhdhdhd</h1>
+                <h1>cdhdhdhdhd</h1>
+               
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!----------------------------footer start here -->
 
     <section class="footer">
       <h4>About Us</h4>
