--- a/courses.html
+++ b/courses.html
@@ -101,14 +101,23 @@
           </div>
           <div class="card_info">
             <div class="details">
-              <h1 class="details_heading">Become a product Manager learn the skills & job.</h1>
+              <h1 class="details_heading">
+                Become a product Manager learn the skills & job.
+              </h1>
               <div class="data">
-                <h1>$21.00</h1>
-                <h1>$21.00</h1>
-                <h1>$21.00</h1>
-                <h1>cdhdhdhdhd</h1>
-                <h1>cdhdhdhdhd</h1>
-               
+                <div class="data_details">
+                  <img
+                    src="https://ng-educal.vercel.app/assets/img/course/teacher/teacher-1.jpg"
+                    alt="usr_img"
+                  />
+                  <h4>Jim Séchen</h4>
+                </div>
+                <hr color="#f0f0f5" />
+                <div class="data_price">
+                  <p class="price">$21.00</p>
+                  <p>35 lessions</p>
+                  <p>Know Details</p>
+                </div>
               </div>
             </div>
           </div>
