--- a/courses.html
+++ b/courses.html
@@ -122,6 +122,156 @@
             </div>
           </div>
         </div>
+        <div class="card">
+          <div class="card_img">
+            <img
+              src="https://ng-educal.vercel.app/assets/img/course/course-3.jpg"
+              alt="card_img"
+            />
+          </div>
+          <div class="card_info">
+            <div class="details">
+              <h1 class="details_heading">
+                Bases Matemáticas dios Álgebra Ecuacion
+              </h1>
+              <div class="data">
+                <div class="data_details">
+                  <img
+                    src="https://ng-educal.vercel.app/assets/img/course/teacher/teacher-3.jpg"
+                    alt="usr_img"
+                  />
+                  <h4>Samuel Serif</h4>
+                </div>
+                <hr color="#f0f0f5" />
+                <div class="data_price">
+                  <p class="price">$111.00</p>
+                  <p>50 lessions</p>
+                  <p>Know Details</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card_img">
+            <img
+              src="https://ng-educal.vercel.app/assets/img/course/course-4.jpg"
+              alt="card_img"
+            />
+          </div>
+          <div class="card_info">
+            <div class="details">
+              <h1 class="details_heading">
+                Strategy law and organization Foundation
+              </h1>
+              <div class="data">
+                <div class="data_details">
+                  <img
+                    src="https://ng-educal.vercel.app/assets/img/course/teacher/teacher-4.jpg"
+                    alt="usr_img"
+                  />
+                  <h4>Elon Gated</h4>
+                </div>
+                <hr color="#f0f0f5" />
+                <div class="data_price">
+                  <p class="price">$31.00</p>
+                  <p>33 lessions</p>
+                  <p>Know Details</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card_img">
+            <img
+              src="https://ng-educal.vercel.app/assets/img/course/course-9.jpg"
+              alt="card_img"
+            />
+          </div>
+          <div class="card_info">
+            <div class="details">
+              <h1 class="details_heading">
+                Product Manager Learn the Skills & job.
+              </h1>
+              <div class="data">
+                <div class="data_details">
+                  <img
+                    src="https://ng-educal.vercel.app/assets/img/course/teacher/teacher-9.jpg"
+                    alt="usr_img"
+                  />
+                  <h4></h4>
+                </div>
+                <hr color="#f0f0f5" />
+                <div class="data_price">
+                  <p class="price">$88.00</p>
+                  <p>18 lessions</p>
+                  <p>Know Details</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card_img">
+            <img
+              src="https://ng-educal.vercel.app/assets/img/course/course-5.jpg"
+              alt="card_img"
+            />
+          </div>
+          <div class="card_info">
+            <div class="details">
+              <h1 class="details_heading">
+                The business Intelligence analyst Course 2022
+              </h1>
+              <div class="data">
+                <div class="data_details">
+                  <img
+                    src="https://ng-educal.vercel.app/assets/img/course/teacher/teacher-5.jpg"
+                    alt="usr_img"
+                  />
+                  <h4>Eleanor Fant</h4>
+                </div>
+                <hr color="#f0f0f5" />
+                <div class="data_price">
+                  <p class="price">$105.00</p>
+                  <p>66 lessions</p>
+                  <p>Know Details</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card_img">
+            <img
+              src="https://ng-educal.vercel.app/assets/img/course/course-7.jpg"
+              alt="card_img"
+            />
+          </div>
+          <div class="card_info">
+            <div class="details">
+              <h1 class="details_heading">
+                Build your media and Public presence
+              </h1>
+              <div class="data">
+                <div class="data_details">
+                  <img
+                    src="https://ng-educal.vercel.app/assets/img/course/teacher/teacher-7.jpg"
+                    alt="usr_img"
+                  />
+                  <h4>Pelican Steve</h4>
+                </div>
+                <hr color="#f0f0f5" />
+                <div class="data_price">
+                  <p class="price">$11.00</p>
+                  <p>5 lessions</p>
+                  <p>Know Details</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <!----------------------------footer start here -->
