--- a/courses.html
+++ b/courses.html
@@ -91,6 +91,7 @@
     <!-------------------popular courses -->
 
     <section class="popular_courses">
+      <h1>Our popular courses</h1>
       <div class="popular_cards">
         <div class="card">
           <div class="card_img">
